force-app/main/default/objects/Org_Version__mdt/Org_Version__mdt.object-meta.xml
<CustomObject>
    <label>Org Version</label>
    <pluralLabel>Org Versions</pluralLabel>
</CustomObject>