force-app/main/default/objects/Org_Version__mdt/fields/IDO_Release_Version__c.field-meta.xml
<CustomField>
    <fullName>IDO_Release_Version__c</fullName>
    <label>IDO Release Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>