force-app/main/default/objects/Org_Version__mdt/fields/Is_Pre_Release__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre-Release</label>
    <type>Checkbox</type>
</CustomField>