force-app/main/default/objects/Org_Version__mdt/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <label>Release Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>