force-app/main/default/objects/Org_Version__mdt/fields/Release_Notes_URL__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_URL__c</fullName>
    <label>Release Notes URL</label>
    <type>Url</type>
</CustomField>