force-app/main/default/objects/Org_Version__mdt/fields/Slack_Support_Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Slack_Support_Channel_URL__c</fullName>
    <label>Slack Support Channel URL</label>
    <type>Url</type>
</CustomField>