force-app/main/default/objects/Org_Version__mdt/fields/Technical_IDO_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_IDO_Release_Date__c</fullName>
    <label>Technical IDO Release Date</label>
    <type>Date</type>
</CustomField>